--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
-# Default ignored files
-/shelf/
 /.idea/
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-
-# Tempdata
-mysql_data
 
 *.env
 
-/App/Core/config.php
+App/Core/config.php
